// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generator - javascript:bootstrap customVersion-commonjs should call source snapshot 1`] = `{}`;

exports[`generator - javascript:bootstrap customVersion-commonjs should match files snapshot 1`] = `
{
  ".yo-rc.json": ObjectContaining {
    "contents": Any<String>,
  },
  "package.json": {
    "contents": "{
  "private": true,
  "dependencies": {},
  "devDependencies": {},
  "engines": {
    "node": "customVersion"
  },
  "scripts": {},
  "name": "dasherizedBaseName",
  "version": "0.0.0",
  "description": "projectDescription",
  "license": "UNLICENSED"
}
",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - javascript:bootstrap packageJsonNodeEngine(false)-module should call source snapshot 1`] = `{}`;

exports[`generator - javascript:bootstrap packageJsonNodeEngine(false)-module should match files snapshot 1`] = `
{
  ".yo-rc.json": ObjectContaining {
    "contents": Any<String>,
  },
  "package.json": {
    "contents": "{
  "private": true,
  "dependencies": {},
  "devDependencies": {},
  "engines": {},
  "scripts": {},
  "name": "dasherizedBaseName",
  "version": "0.0.0",
  "description": "projectDescription",
  "license": "UNLICENSED",
  "type": "module"
}
",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - javascript:bootstrap packageJsonNodeEngine(true) should call source snapshot 1`] = `{}`;

exports[`generator - javascript:bootstrap packageJsonNodeEngine(true) should match files snapshot 1`] = `
{
  ".yo-rc.json": ObjectContaining {
    "contents": Any<String>,
  },
  "package.json": {
    "contents": "{
  "private": true,
  "dependencies": {},
  "devDependencies": {},
  "engines": {
    "node": "^18.19.0 || >= 20.6.1"
  },
  "scripts": {},
  "name": "dasherizedBaseName",
  "version": "0.0.0",
  "description": "projectDescription",
  "license": "UNLICENSED"
}
",
    "stateCleared": "modified",
  },
}
`;
